--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "axios": "^0.23.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "ddos": "^0.2.1",
+    "express": "^4.17.1",
+    "express-rate-limit": "^5.5.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.14",
     "restana": "^4.9.1"
